--- a/build.gradle
+++ b/build.gradle
@@ -20,8 +20,10 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
+	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.21'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
