chore(build.gradle): add json dependency

--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.21'
+	implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
