--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.21'
 	implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+	implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
