--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,5 +29,7 @@ microdust-time-url: https://api.tomorrow.io/v4/timelines
 microdust-time-key:
 microdust-map-url: http://apis.data.go.kr/B552584/ArpltnInforInqireSvc/getCtprvnRltmMesureDnsty
 microdust-map-key:
-
-
+weather-location-url: http://dataservice.accuweather.com/locations/v1/cities/geoposition/search
+weather-forecast-url: http://dataservice.accuweather.com/forecasts/v1/daily/5day/2002471
+weather-main-url: http://dataservice.accuweather.com/currentconditions/v1/
+weather-key:
