--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,8 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	compileOnly 'org.projectlombok:lombok'
+    implementation 'org.projectlombok:lombok:1.18.16'
+    compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.21'
 	implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
